Init common layout

--- a/libs/layout/src/lib/containers/layout/layout.component.html
+++ b/libs/layout/src/lib/containers/layout/layout.component.html
@@ -1,1 +1,4 @@
-<p>layout works!</p>
+<mat-toolbar color="primary" fxLayout="row">
+  <span>Meta Code</span>
+</mat-toolbar>
+<ng-content></ng-content>
