--- a/libs/layout/src/lib/containers/layout/layout.component.html
+++ b/libs/layout/src/lib/containers/layout/layout.component.html
@@ -1,4 +1,18 @@
 <mat-toolbar color="primary" fxLayout="row">
   <span>Meta Code</span>
+  <span class="example-spacer"></span>
+  <span
+    mat-button
+    [routerLink]="['/auth/login']"
+    routerLinkActive="router-link-active"
+    >Login</span
+  >
+  <button mat-button>Logout</button>
+  <mat-icon
+    class="example-icon"
+    aria-hidden="false"
+    aria-label="Example user verified icon"
+    >verified_user</mat-icon
+  >
 </mat-toolbar>
 <ng-content></ng-content>
