Extract header and footer components

--- a/libs/layout/src/lib/containers/layout/layout.component.html
+++ b/libs/layout/src/lib/containers/layout/layout.component.html
@@ -1,2 +1,5 @@
-<mtcd-net-toolbar></mtcd-net-toolbar>
-<ng-content></ng-content>
+<mtcd-net-header fxLayout="column"></mtcd-net-header>
+<main fxFlex>
+  <ng-content></ng-content>
+</main>
+<mtcd-net-footer fxLayout="column"></mtcd-net-footer>
