--- a/apps/site/src/styles.scss
+++ b/apps/site/src/styles.scss
@@ -1,20 +1,10 @@
+/* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-/* You can add global styles to this file, and also import other style files */
 
 // @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 // body {
-//   margin: 0;
+//   font-family: Roboto, 'Helvetica Neue', sans-serif;
 // }
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-body {
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-}
