Update contact us button title

--- a/libs/layout/src/lib/components/header/header.component.html
+++ b/libs/layout/src/lib/components/header/header.component.html
@@ -18,7 +18,7 @@
       <mat-icon class="mr-1" aria-hidden="false" aria-label="Email icon"
         >email</mat-icon
       >
-      Contact
+      Contact us
     </button>
   </mat-toolbar>
 </header>
