--- a/libs/layout/src/lib/components/footer/footer.component.html
+++ b/libs/layout/src/lib/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<footer>Footer works!</footer>
+<footer fxLayout fxLayoutAlign="center center">
+  <p class="text-sky-100">&copy; 2021 Metacode, Inc.</p>
+</footer>
