Change contact button title

--- a/libs/layout/src/lib/components/header/header.component.html
+++ b/libs/layout/src/lib/components/header/header.component.html
@@ -14,11 +14,11 @@
     <a class="hover:text-sky-200" mat-button routerLink="/products">Products</a>
     <a class="hover:text-sky-200" mat-button routerLink="/services">Services</a>
     <a class="hover:text-sky-200" mat-button routerLink="/careers">Careers</a>
-    <button mat-button class="hover:text-purple-200 bg-purple-900 shadow">
+    <button mat-button class="hover:text-purple-100 bg-purple-900 shadow">
       <mat-icon class="mr-1" aria-hidden="false" aria-label="Email icon"
         >email</mat-icon
       >
-      Contact us
+      Email
     </button>
   </mat-toolbar>
 </header>
