--- a/libs/layout/src/lib/containers/layout/layout.component.html
+++ b/libs/layout/src/lib/containers/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mtcd-net-header></mtcd-net-header>
-<main fxFlex>
+<main fxFlex fxLayout="column">
   <ng-content></ng-content>
 </main>
 <mtcd-net-footer></mtcd-net-footer>
