--- a/libs/layout/src/lib/components/footer/footer.component.html
+++ b/libs/layout/src/lib/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="shadow pt-2" fxLayout fxLayoutAlign="center center">
-  <p class="text-sky-100">&copy; 2021 Metacode, Inc.</p>
+  <p class="font-mono text-sky-100">&copy; 2021 Metacode</p>
 </footer>
