--- a/libs/layout/src/lib/components/header/header.component.html
+++ b/libs/layout/src/lib/components/header/header.component.html
@@ -1,8 +1,10 @@
 <header>
   <mat-toolbar
-    fxLayoutAlign="start center"
+    fxLayout
+    fxLayoutAlign="center center"
     class="bg-sky-900 text-gray-200 shadow-md"
   >
+    <mat-icon>menu</mat-icon>
     <a
       class="uppercase hover:text-sky-200"
       mat-button
